--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,9 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/app/home/home.animations.scss",
+              "src/app/home/home.responsive.scss"
             ],
             "scripts": []
           },
