--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,9 @@
               "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss",
               "src/app/home/home.animations.scss",
-              "src/app/home/home.responsive.scss"
+              "src/app/home/home.responsive.scss",
+              "src/app/home/home.showoff.scss"
+
             ],
             "scripts": []
           },
